--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,27 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.yopeso</groupId>
-    <artifactId>jacoco-coverage</artifactId>
-    <version>0.2.1</version>
-    <packaging>jar</packaging>
-    <name>jacoco-coverage</name>
-    <description>Tool for extracting value of instructions coverage from jacoco report. From the artifact is developed
-        plugin. At github is tagged as 0.2.1-pre.maven.plugin.
-    </description>
-    <url>https://github.com/yopeso/jacoco-coverage/tree/0.2.1-pre.maven.plugin</url>
+    <artifactId>jacococoverage-maven-plugin</artifactId>
+    <version>0.3.0-SNAPSHOT</version>
+    <packaging>maven-plugin</packaging>
+
+    <name>jacococoverage-maven-plugin Maven Mojo</name>
+    <description>Maven plugin for extracting value of instructions coverage from jacoco report</description>
+    <url>https://github.com/yopeso/jacoco-coverage</url>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <licenses>
         <license>
             <name>The Apache License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Jarek Blaszczyk</name>
@@ -29,11 +32,13 @@
             <organizationUrl>https://yopeso.com</organizationUrl>
         </developer>
     </developers>
+
     <scm>
         <connection>scm:git:git://github.com/yopeso/jacoco-coverage.git</connection>
         <developerConnection>scm:git:ssh://github.com/yopeso/jacoco-coverage.git</developerConnection>
-        <url>https://github.com/yopeso/jacoco-coverage/tree/0.2.1-pre.maven.plugin</url>
+        <url>https://github.com/yopeso/jacoco-coverage/tree/master</url>
     </scm>
+
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -44,7 +49,20 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
+
     <dependencies>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>3.5</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -52,6 +70,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -59,13 +78,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.0.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.yopeso.jacococoverage.MainApplication</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
+                <!--<configuration>-->
+                <!--<archive>-->
+                <!--<manifest>-->
+                <!--<mainClass>com.yopeso.jacococoverage.mavenplugin.MainApplication</mainClass>-->
+                <!--</manifest>-->
+                <!--</archive>-->
+                <!--</configuration>-->
             </plugin>
         </plugins>
     </build>
