--- a/pom.xml
+++ b/pom.xml
@@ -3,27 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.yopeso</groupId>
     <artifactId>jacoco-coverage</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.1</version>
     <packaging>jar</packaging>
-
     <name>jacoco-coverage</name>
-    <description>Tool for extracting value of instructions coverage from jacoco report</description>
-    <url>https://github.com/yopeso/jacoco-coverage</url>
-
+    <description>Tool for extracting value of instructions coverage from jacoco report. From the artifact is developed
+        plugin. At github is tagged as 0.2.1-pre.maven.plugin.
+    </description>
+    <url>https://github.com/yopeso/jacoco-coverage/tree/0.2.1-pre.maven.plugin</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <licenses>
         <license>
             <name>The Apache License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
-
     <developers>
         <developer>
             <name>Jarek Blaszczyk</name>
@@ -32,13 +29,11 @@
             <organizationUrl>https://yopeso.com</organizationUrl>
         </developer>
     </developers>
-
     <scm>
         <connection>scm:git:git://github.com/yopeso/jacoco-coverage.git</connection>
         <developerConnection>scm:git:ssh://github.com/yopeso/jacoco-coverage.git</developerConnection>
-        <url>https://github.com/yopeso/jacoco-coverage/tree/master</url>
+        <url>https://github.com/yopeso/jacoco-coverage/tree/0.2.1-pre.maven.plugin</url>
     </scm>
-
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -49,8 +44,6 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -59,7 +52,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
