back to maven jar plugin

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.yopeso</groupId>
     <artifactId>jacococoverage-maven-plugin</artifactId>
-    <version>0.4.0</version>
-    <packaging>jar</packaging>
+    <version>0.4.1</version>
+    <packaging>maven-plugin</packaging>
     <name>jacococoverage-maven-plugin Maven Mojo</name>
     <description>Maven plugin for extracting value of instructions coverage from jacoco report</description>
     <url>https://github.com/yopeso/jacoco-coverage</url>
@@ -30,7 +30,7 @@
     <scm>
         <connection>scm:git:git://github.com/yopeso/jacoco-coverage.git</connection>
         <developerConnection>scm:git:ssh://github.com/yopeso/jacoco-coverage.git</developerConnection>
-        <url>https://github.com/yopeso/jacoco-coverage/tree/0.4.0-maven.plugin</url>
+        <url>https://github.com/yopeso/jacoco-coverage/tree/0.4.1-maven.plugin</url>
     </scm>
     <distributionManagement>
         <snapshotRepository>
@@ -61,6 +61,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+            </plugin>
+        </plugins>
+    </build>
     <profiles>
         <profile>
             <id>release</id>
