--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.yopeso</groupId>
     <artifactId>jacococoverage-maven-plugin</artifactId>
-    <version>0.4.2</version>
+    <version>0.4.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>jacococoverage-maven-plugin Maven Mojo</name>
     <description>Maven plugin for extracting value of instructions coverage from jacoco report</description>
@@ -28,9 +27,9 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:git://github.com/yopeso/jacoco-coverage.git</connection>
-        <developerConnection>scm:git:ssh://github.com/yopeso/jacoco-coverage.git</developerConnection>
-        <url>https://github.com/yopeso/jacoco-coverage/tree/0.4.2-maven.plugin</url>
+        <connection>scm:git:https://github.com/yopeso/jacoco-coverage.git</connection>
+        <developerConnection>scm:git:https://github.com/yopeso/jacoco-coverage.git</developerConnection>
+        <url>https://github.com/yopeso/jacoco-coverage</url>
     </scm>
     <distributionManagement>
         <snapshotRepository>
@@ -68,6 +67,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.0.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>@{project.version}-maven-plugin</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <!--<releaseProfiles>releases</releaseProfiles>-->
+                </configuration>
             </plugin>
         </plugins>
     </build>
