prepare pom.xml for deploy with release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.yopeso</groupId>
     <artifactId>jacococoverage-maven-plugin</artifactId>
-    <version>0.4.3</version>
+    <version>0.4.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>jacococoverage-maven-plugin Maven Mojo</name>
     <description>Maven plugin for extracting value of instructions coverage from jacoco report</description>
@@ -29,8 +30,7 @@
         <connection>scm:git:https://github.com/yopeso/jacoco-coverage.git</connection>
         <developerConnection>scm:git:https://github.com/yopeso/jacoco-coverage.git</developerConnection>
         <url>https://github.com/yopeso/jacoco-coverage</url>
-      <tag>0.4.3-maven-plugin</tag>
-  </scm>
+    </scm>
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -75,7 +75,7 @@
                 <configuration>
                     <tagNameFormat>@{project.version}-maven-plugin</tagNameFormat>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <!--<releaseProfiles>releases</releaseProfiles>-->
+                    <releaseProfiles>release</releaseProfiles>
                 </configuration>
             </plugin>
         </plugins>
