--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.yopeso</groupId>
     <artifactId>jacococoverage-maven-plugin</artifactId>
-    <version>0.4.3</version>
+    <version>0.4.4-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>jacococoverage-maven-plugin Maven Mojo</name>
     <description>Maven plugin for extracting value of instructions coverage from jacoco report</description>
@@ -29,7 +29,7 @@
         <connection>scm:git:https://github.com/yopeso/jacoco-coverage.git</connection>
         <developerConnection>scm:git:https://github.com/yopeso/jacoco-coverage.git</developerConnection>
         <url>https://github.com/yopeso/jacoco-coverage</url>
-      <tag>0.4.3-maven-plugin</tag>
+      <tag>HEAD</tag>
   </scm>
     <distributionManagement>
         <snapshotRepository>
